# Demos

./: stress-axum-results.json  stress-gin-results.json  stress-micronaut-results.json  stress-test-axum.js  stress-test-gin.js  stress-test-micronaut.js  stress-test-webflux.js  stress-test.js  stress-webflux-results.json  summary.json
axum-mongo/: Cargo.toml  Dockerfile  README.md  summary.json
axum-mongo/src/: config.rs  db.rs  main.rs  model.rs  service.rs
axum-mongo/src/handler/: mod.rs  record.rs  seed.rs
axum-mongo/src/repository/: primary.rs  secondary.rs
gin-mongo/: .dockerignore  Dockerfile  README.md  go.mod
gin-mongo/cmd/: main.go
gin-mongo/internal/config/: config.go
gin-mongo/internal/db/: mongo.go
gin-mongo/internal/handler/: record_handler.go  seed_handler.go
gin-mongo/internal/model/: record.go
gin-mongo/internal/repository/: primary_repository.go  secondary_repository.go
gin-mongo/internal/service/: record_service.go
micronaut-mongo/: Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
micronaut-mongo/src/main/java/com/demos/micronaut/: Application.java
micronaut-mongo/src/main/java/com/demos/micronaut/config/: MongoConfig.java
micronaut-mongo/src/main/resources/: application.yml
quarkus-mongo/: .dockerignore  Dockerfile  README.md  mvnw  mvnw.cmd  pom.xml
quarkus-mongo/src/main/resources/: application.properties
webflux-mongo/: .dockerignore  Dockerfile  README.md  pom.xml
webflux-mongo/src/main/java/com/demos/webflux/: Application.java
webflux-mongo/src/main/resources/: application.yml
(+21 files in other folders)
